syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

message Chat {
        string id = 1;
        string creator = 2;
        repeated string managers = 3;
        string topic = 4;
        string details = 5;
        string type = 6;
        string description = 7;
        repeated string tags = 8;
        repeated string followers = 9;
        google.protobuf.Timestamp time = 10;
}

message PostRequest {
        string creator = 1;
        repeated string managers = 2;
        string topic = 3;
        string details = 4;
        string type = 5;
        string description = 6;
        repeated string tags = 7;
        repeated string followers = 8;
        google.protobuf.Timestamp time = 9;
}

message PostResponse {
        string chat = 1;
}

message GetRequest {
        string id = 1;
        uint64 userID = 2;
}

message GetResponse {
        Chat chat = 1;
}

message GetMultipleRequest {
        uint64 skip = 1;
        uint64 take = 2;
}

message GetMultipleResponse {
        repeated Chat chats = 1;
}

message PutRequest {
        string id = 1;
        string creator = 2;
        repeated string managers = 3;
        string topic = 4;
        string details = 5;
        string type = 6;
        string description = 7;
        repeated string tags = 8;
        repeated string followers = 9;
}

message PutResponse {
        string chat = 1;
}

message DeleteRequest {
        string id = 1;
}

message DeleteResponse {
        string id = 1;
}

service ChatService {
        rpc Post (PostRequest) returns (PostResponse) {}
        rpc Get (GetRequest) returns (GetResponse) {}
        rpc GetMultiple (GetMultipleRequest) returns (GetMultipleResponse) {}
        rpc Put (PutRequest) returns (PutResponse) {}
        rpc Delete (DeleteRequest) returns (DeleteResponse) {}
}